Redirect links found in wayback machine on the old website to the new corresponding pages.

--- a/_posts/2018-08-07-seqan-um.md
+++ b/_posts/2018-08-07-seqan-um.md
@@ -3,6 +3,8 @@ layout: post
 title: "SeqAn UM 2018"
 categories: event
 excerpt_separator: <!--more-->
+redirect_from:
+  - /seqan-um-2018/
 ---
 
 Dear SeqAn followers and bioinformatics enthusiasts,
